# Miden-Game-of-Life

./: Cargo.toml  Game-of-Life.inputs  Game-of-Life.masm  README.md
src/: app.rs  create_assembly.rs  lib.rs  main.rs
