[package]
name = "Miden-Game-of-Life"
version = "0.2.0"
edition = "2021"
authors = ["Dominik Schmid <schmid.dominik@gmx.net>"]
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
egui_extras = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
miden = { git = "https://github.com/maticnetwork/miden", branch = "next", package = "miden", default-features = false}
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
serde_json = "1.0.48"
structopt = { version = "0.3", default-features = false }
math = { package = "winter-math", version = "0.4.1", default-features = false }
rand-utils = { package = "winter-rand-utils", version = "0.4.1", optional = true }
crypto = { package = "winter-crypto", version = "0.4.1", optional = true }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"


[profile.release]
opt-level = 2 # fast and small wasm